# chaosmesh-py

./: .gitignore  MANIFEST.in  pyproject.toml
chaos_sdk/: __init__.py  client.py  config.py  controller.py  exceptions.py  manager.py  utils.py
chaos_sdk/experiments/: __init__.py  network_chaos.py  pod_chaos.py
chaos_sdk/models/: __init__.py  base.py  enums.py  selector.py
examples/: network_delay_example.py  pod_kill_example.py  pytest_integration.py
scripts/: pre-publish-check.sh  publish.sh  update-version.sh
