[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-sdk"
version = "0.1.0"
description = "Enterprise-grade Python SDK for Chaos Mesh automation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chaos Mesh SDK Contributors"}
]
keywords = ["chaos-mesh", "chaos-engineering", "kubernetes", "testing", "fault-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "kubernetes>=28.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dw214/chaoskit"
Documentation = "https://github.com/dw214/chaoskit#readme"
Repository = "https://github.com/dw214/chaoskit"
Issues = "https://github.com/dw214/chaoskit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos_sdk*"]

[tool.setuptools.package-data]
chaos_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
